--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -1,5 +1,4 @@
 #page-auth {
-
   display: flex;
   align-items: stretch;
   height: 100vh;
@@ -7,14 +6,13 @@
   aside {
     flex: 7;
 
-    background: #835afd; 
+    background: #835afd;
     color: #FFF;
 
     display: flex;
-    
     flex-direction: column;
     justify-content: center;
-
+    
     padding: 120px 80px;
 
     img {
@@ -28,28 +26,29 @@
     }
 
     p {
-      font-size: 24;
+      font-size: 24px;
       line-height: 32px;
       margin-top: 16px;
-      color: #f8f8f8
+      color: #f8f8f8;
     }
-
   }
+
   main {
     flex: 8;
+
     padding: 0 32px;
 
     display: flex;
-    align-items:center;
-    justify-content:center;
+    align-items: center;
+    justify-content: center;
   }
 
   .main-content {
     display: flex;
     flex-direction: column;
-    width:100%;
+    width: 100%;
     max-width: 320px;
-    align-items:stretch;
+    align-items: stretch;
     text-align: center;
 
     > img {
@@ -62,42 +61,39 @@
       font-family: 'Poppins', sans-serif;
     }
 
-
-    form{ 
+    form {
       input {
         height: 50px;
         border-radius: 8px;
         padding: 0 16px;
         background: #FFF;
         border: 1px solid #a8a8b3;
-
       }
-      button {
+
+      button { 
         margin-top: 16px;
       }
 
       button, input {
-        width:100%;
+        width: 100%;
       }
-
     }
 
     p {
-      font-size:14px;
+      font-size: 14px;
       color: #737380;
       margin-top: 16px;
-      
+
       a {
-        color: #e559f9;  
+        color: #e559f9;
       }
     }
-
   }
 
   .create-room {
     margin-top: 64px;
     height: 50px;
-    border-radius:8px;
+    border-radius: 8px;
     font-weight: 500;
     background: #ea4335;
     color: #FFF;
@@ -105,14 +101,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-  
+
     cursor: pointer;
     border: 0;
 
     transition: filter 0.2s;
 
     img {
-      margin-right:8px;
+      margin-right: 8px;
     }
 
     &:hover {
@@ -125,26 +121,23 @@
     color: #a8a8b3;
 
     margin: 32px 0;
-
     display: flex;
-
     align-items: center;
 
-    &::before{
-      content:'';
-      flex:1;
-      height:1px;
+    &::before {
+      content: '';
+      flex: 1;
+      height: 1px;
       background: #a8a8b3;
       margin-right: 16px;
     }
 
-    &::after{
-      content:'';
-      flex:1;
-      height:1px;
+    &::after {
+      content: '';
+      flex: 1;
+      height: 1px;
       background: #a8a8b3;
       margin-left: 16px;
     }
   }
-
 }
